--- a/stockbff01-mjp/values.yaml
+++ b/stockbff01-mjp/values.yaml
@@ -2,7 +2,7 @@ global:
   ingressSubdomain: gsi-cloudnative-ocp-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0000.sng01.containers.appdomain.cloud
   tlsSecretName: gsi-cloudnative-ocp-cluster
 
-<app-chart-name>:
+stockbff01-mjp:
   replicaCount: 3
   
   ingress:
