--- a/inventory-svc-stock/values.yaml
+++ b/inventory-svc-stock/values.yaml
@@ -2,7 +2,7 @@ global:
   ingressSubdomain: gsi-learning-ocp311-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0000.eu-gb.containers.appdomain.cloud
   tlsSecretName: gsi-learning-ocp311-cluster
 
-stockbff01-mjp:
+inventory-svc-stock:
   replicaCount: 1
 
   route:
