--- a/inventory-svc-stock/values.yaml
+++ b/inventory-svc-stock/values.yaml
@@ -1,15 +1,16 @@
 global:
-  ingressSubdomain: gsi-learning-ocp311-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0000.eu-gb.containers.appdomain.cloud
+  ingressSubdomain: gsi-learning-ocp311-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0001.eu-gb.containers.appdomain.cloud
   tlsSecretName: gsi-learning-ocp311-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0000
 
 inventory-svc-stock:
   replicaCount: 1
 
   route:
-    enabled: false
+    enabled: true
+    includeHost: true
 
   ingress:
-    enabled: true
+    enabled: false
     host: inventory-svc-stock
     namespaceInHost: true
     tlsSecretName: gsi-learning-ocp311-clu-7ec5d722a0ab3f463fdc90eeb94dbc70-0000
